test/pass/internal/try_except_return_fold.lily
define f(a: Integer) : Integer
{
    try:
        return 1
    except Exception:
        return 2
}
